--- a/client/styles/Tag.module.css
+++ b/client/styles/Tag.module.css
@@ -28,7 +28,7 @@
   background-color: #57565a;
   margin: 0 5px;
   display: inline-flex;
-  align-content: center;
+  align-items: center;
 }
 
 .TagSpacing {
