--- a/client/styles/Intro.module.css
+++ b/client/styles/Intro.module.css
@@ -6,3 +6,12 @@
 .Intro h1 {
   font-size: 2rem;
 }
+
+.Wrap {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
